--- a/src/components/FlexGrid/FlexGrid.modules.scss
+++ b/src/components/FlexGrid/FlexGrid.modules.scss
@@ -26,8 +26,3 @@ $max-widths: (xs: auto, small: 576px, medium: 768px, large: 992px, xl: 1200px);
     }
   }
 }
-
-.gutterless {
-  padding-left: 0 !important;
-  padding-right: 0 !important;
-}
